Remove and add first to the list of pool